ca-staging/charts/security/policy-reporter-route/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: policy-reporter-ui-proxy
  namespace: kyverno
spec:
  ports:
    - name: http-proxy
      port: 80
      targetPort: 4180
      protocol: TCP
  selector:
    app.kubernetes.io/name: policy-reporter
    app.kubernetes.io/instance: policy-reporter
    app.kubernetes.io/component: ui
  type: ClusterIP
